--- a/doc/_theme/sphinx_docs_theme/static/css/custom.css
+++ b/doc/_theme/sphinx_docs_theme/static/css/custom.css
@@ -26,7 +26,9 @@
     height: 100%;
 }
 
-ul, ol, dl {
+.side-nav-container ul,
+.side-nav-container ol,
+.side-nav-container dl {
     margin: 0;
     padding: 0;
     list-style: none;
