--- a/doc/_theme/sphinx_docs_theme/static/css/custom.css
+++ b/doc/_theme/sphinx_docs_theme/static/css/custom.css
@@ -59,7 +59,14 @@
     padding-left: 80px;
     font-size: 80%;
 }
-
+.side-nav-menu li.toctree-l5>a {
+    padding-left: 90px;
+    font-size: 80%;
+}
+.side-nav-menu li.toctree-l6>a {
+    padding-left: 100px;
+    font-size: 80%;
+}
 
 
 .side-nav-menu li.current {
