DOC: add margins for top / bottom of containers

--- a/doc/_theme/sphinx_docs_theme/static/css/custom.css
+++ b/doc/_theme/sphinx_docs_theme/static/css/custom.css
@@ -197,6 +197,8 @@ code {
 .container {
     padding-left: 0;
     padding-right: 0;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 /* SPHINX PANELS */
