ENH: CSS, add more space between parameter name and type in API docs

--- a/doc/_theme/sphinx_docs_theme/static/css/custom.css
+++ b/doc/_theme/sphinx_docs_theme/static/css/custom.css
@@ -168,6 +168,10 @@ code {
     margin-top: 5px;
     margin-bottom: 5px;
 }
+.classifier {
+    margin-left: 5px
+}
+
 /* SPHINX PANELS */
 .card-header .card-text {
     color: white;
