ENH: tweaks to CSS for API doc formatting
Thanks to Sheng for this contribution!

--- a/doc/_theme/sphinx_docs_theme/static/css/custom.css
+++ b/doc/_theme/sphinx_docs_theme/static/css/custom.css
@@ -172,6 +172,20 @@ code {
     margin-left: 5px
 }
 
+/* API doc formatting of methods and arguments */
+.method {
+    margin-top: 25px;
+}
+.method > dt:first-child > em:first-child, .method > dt:first-child > code {
+    font-size: 30px;
+}
+.field-list > dt:first-child {
+    font-size: 20px;
+}
+dl.simple strong {
+    font-size: 15px;
+}
+
 /* SPHINX PANELS */
 .card-header .card-text {
     color: white;
