ENH: improve citations formatting

--- a/doc/_theme/sphinx_docs_theme/static/css/custom.css
+++ b/doc/_theme/sphinx_docs_theme/static/css/custom.css
@@ -171,7 +171,14 @@ code {
 .classifier {
     margin-left: 5px
 }
+/* Citations and References */
+.section > .rubric {
+    font-weight: bold;
+}
 
+.section > .rubric ~ dl > dd {
+    margin-left: 24px !important;
+}
 /* API doc formatting of methods and arguments */
 .method {
     margin-top: 25px;
