--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -186,6 +186,13 @@ dl.simple strong {
     font-size: 15px;
 }
 
+.rubric {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 20px;
+    font-weight: normal;
+    border-bottom: 1px solid rgb(204, 204, 204);
+}
+
 /* SPHINX PANELS */
 .card-header .card-text {
     color: white;
